--- a/pre-build/html/custom-contextMenu.html
+++ b/pre-build/html/custom-contextMenu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    @@include('../include/head.html')
+    @@include('./include/head.html')
 </head>
 <body>
     <div id="wrap">
@@ -14,7 +14,7 @@
                   <span class="hidden">메인으로</span>
                 </a>
               </li>
-              <li class="noDepth active">
+              <li class="noDepth">
                 <span>
                   <a href="sub_first.html" title="홈">Home</a>
                 </span>
@@ -62,13 +62,13 @@
                 <span title="Layout">Layout</span>
                 <ul class="leftSubMenu">
                   <li>
-                    <a href="#" title="Center element">Center element</a>
+                    <a href="layout-centerEle.html" title="Center element">Center element</a>
                   </li>
                   <li>
-                    <a href="#" title="Tab">Tab</a>
+                    <a href="layout-tab.html" title="Tab">Tab</a>
                   </li>
                   <li>
-                    <a href="#" title="Background-image 100%">Background-image 100%</a>
+                    <a href="layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
                   </li>
                   <li>
                     <a href="#" title="Slide">Slide</a>
@@ -88,16 +88,16 @@
                     <a href="input-inputStyle.html" title="Input">input</a>
                   </li>
                   <li>
-                    <a href="#" title="Radio">radio</a>
+                    <a href="input-radioStyle.html" title="Radio">radio</a>
                   </li>
                   <li>
-                    <a href="#" title="Select">select</a>
+                    <a href="input-selectStyle.html" title="Select">select</a>
                   </li>
                   <li>
-                    <a href="#" title="textarea">textarea</a>
+                    <a href="input-textareaStyle.html" title="textarea">textarea</a>
                   </li>
                   <li>
-                    <a href="#" title="checkbox">checkbox</a>
+                    <a href="input-chkboxStyle.html" title="checkbox">checkbox</a>
                   </li>
                 </ul>
               </li>
@@ -112,10 +112,10 @@
                   </li>
                 </ul>
               </li>
-              <li>
+              <li class="active">
                 <span title="Custom">Custom</span>
-                <ul class="leftSubMenu">
-                  <li>
+                <ul class="leftSubMenu block">
+                  <li class="active">
                     <a href="custom-contextMenu.html" title="Context Menu">Context Menu</a>
                   </li>
                   <li>
