--- a/pre-build/html/custom-scroll.html
+++ b/pre-build/html/custom-scroll.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    @@include('../include/head.html')
+    @@include('./include/head.html')
 </head>
 <body>
     <div id="wrap">
@@ -14,7 +14,7 @@
                   <span class="hidden">메인으로</span>
                 </a>
               </li>
-              <li class="noDepth active">
+              <li class="noDepth">
                 <span>
                   <a href="sub_first.html" title="홈">Home</a>
                 </span>
@@ -62,13 +62,13 @@
                 <span title="Layout">Layout</span>
                 <ul class="leftSubMenu">
                   <li>
-                    <a href="#" title="Center element">Center element</a>
+                    <a href="layout-centerEle.html" title="Center element">Center element</a>
                   </li>
                   <li>
-                    <a href="#" title="Tab">Tab</a>
+                    <a href="layout-tab.html" title="Tab">Tab</a>
                   </li>
                   <li>
-                    <a href="#" title="Background-image 100%">Background-image 100%</a>
+                    <a href="layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
                   </li>
                   <li>
                     <a href="#" title="Slide">Slide</a>
@@ -85,19 +85,19 @@
                 <span title="Input">Input</span>
                 <ul class="leftSubMenu">
                   <li>
-                    <a href="#" title="Input">input</a>
+                    <a href="input-inputStyle.html" title="Input">input</a>
                   </li>
                   <li>
-                    <a href="#" title="Radio">radio</a>
+                    <a href="input-radioStyle.html" title="Radio">radio</a>
                   </li>
                   <li>
-                    <a href="#" title="Select">select</a>
+                    <a href="input-selectStyle.html" title="Select">select</a>
                   </li>
                   <li>
-                    <a href="#" title="textarea">textarea</a>
+                    <a href="input-textareaStyle.html" title="textarea">textarea</a>
                   </li>
                   <li>
-                    <a href="#" title="checkbox">checkbox</a>
+                    <a href="input-chkboxStyle.html" title="checkbox">checkbox</a>
                   </li>
                 </ul>
               </li>
@@ -112,13 +112,13 @@
                   </li>
                 </ul>
               </li>
-              <li>
+              <li class="active">
                 <span title="Custom">Custom</span>
-                <ul class="leftSubMenu">
+                <ul class="leftSubMenu block">
                   <li>
                     <a href="custom-contextMenu.html" title="Context Menu">Context Menu</a>
                   </li>
-                  <li>
+                  <li class="active">
                     <a href="custom-scroll.html" title="Scroll design">Scroll design</a>
                   </li>
                 </ul>
@@ -146,7 +146,7 @@
                 </button>
             </div>
 
-            @@include('../include/util.html')
+            @@include('./include/util.html')
             
             <div class="rightArea">
                 <div class="textBox">
@@ -240,15 +240,13 @@
                     <div class="titleH2">
                         <h2>Result</h2>
                     </div>
-                    <iframe src="../codingList.html" width="1168" height="150">
-                    <!-- <div class="resultArea">
+                    <div class="resultArea">
                         <div class="inner">
                             <div class="exBox overflow-y cScroll">
                               <div class="overflowDiv"></div>
                             </div>
                         </div>
-                    </div> -->
-                    </iframe>
+                    </div>
                 </div>
             </div>
         </div>
