--- a/pre-build/html/layout-bg-image.html
+++ b/pre-build/html/layout-bg-image.html
@@ -1,19 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="icon" href="../images/ico/ico-favi.png" sizes="16x16" />
-<link rel="stylesheet" href="../css/component.css" type="text/css" />
-<link rel="stylesheet" href="../lib/swiper/css/swiper.css" />
-<link rel="stylesheet" href="../css/prism.css" />
-<script type="text/javascript" src="../lib/jquery-1.12.4.js"></script>
-<script type="text/javascript" src="../lib/swiper/js/swiper.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
-<script src="../../js/prism.js"></script>
-<script src="../../js/component.js"></script>
-<title>Component css</title>
-
+    @@include('./include/head.html')
 </head>
 <body>
     <div id="wrap">
@@ -26,7 +14,7 @@
                   <span class="hidden">메인으로</span>
                 </a>
               </li>
-              <li class="noDepth active">
+              <li class="noDepth">
                 <span>
                   <a href="sub_first.html" title="홈">Home</a>
                 </span>
@@ -70,17 +58,17 @@
                   </li>
                 </ul>
               </li>
-              <li>
+              <li class="active">
                 <span title="Layout">Layout</span>
-                <ul class="leftSubMenu">
+                <ul class="leftSubMenu block">
                   <li>
-                    <a href="#" title="Center element">Center element</a>
+                    <a href="layout-centerEle.html" title="Center element">Center element</a>
                   </li>
                   <li>
-                    <a href="#" title="Tab">Tab</a>
+                    <a href="layout-tab.html" title="Tab">Tab</a>
                   </li>
-                  <li>
-                    <a href="#" title="Background-image 100%">Background-image 100%</a>
+                  <li class="active">
+                    <a href="layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
                   </li>
                   <li>
                     <a href="#" title="Slide">Slide</a>
@@ -97,19 +85,19 @@
                 <span title="Input">Input</span>
                 <ul class="leftSubMenu">
                   <li>
-                    <a href="#" title="Input">input</a>
+                    <a href="input-inputStyle.html" title="Input">input</a>
                   </li>
                   <li>
-                    <a href="#" title="Radio">radio</a>
+                    <a href="input-radioStyle.html" title="Radio">radio</a>
                   </li>
                   <li>
-                    <a href="#" title="Select">select</a>
+                    <a href="input-selectStyle.html" title="Select">select</a>
                   </li>
                   <li>
-                    <a href="#" title="textarea">textarea</a>
+                    <a href="input-textareaStyle.html" title="textarea">textarea</a>
                   </li>
                   <li>
-                    <a href="#" title="checkbox">checkbox</a>
+                    <a href="input-chkboxStyle.html" title="checkbox">checkbox</a>
                   </li>
                 </ul>
               </li>
@@ -158,40 +146,12 @@
                 </button>
             </div>
 
-            <div class="utilArea">
-  <ul>
-      <li>
-          <a href="mailto:sky11916@naver.com" class="btnMail">
-              <span class="hidden">문의</span>
-              <div class="toolTip mail">
-                  <span>메일 문의</span>
-              </div>
-          </a>
-      </li>
-      <li>
-          <button type="button" class="btnShare">
-              <span class="hidden">공유</span>
-              <div class="toolTip share">
-                  <span>공유하기</span>
-              </div>
-          </button>
-          
-      </li>
-      <li>
-          <button type="button" class="btnMore">
-              <span class="hidden">더보기</span>
-              <div class="toolTip more">
-                  <span>더보기</span>
-              </div>
-          </button>
-      </li>
-  </ul>
-</div>
+            @@include('./include/util.html')
             
             <div class="rightArea">
                 <div class="textBox">
                     <div class="titleH1">
-                        <h1>Overflow scroll</h1>
+                        <h1>Background-image 100%</h1>
                     </div>
                     <div class="tabWrap type01">
                       <div class="tabNav">
@@ -206,8 +166,26 @@
                         <div class="highlightArea cScroll">
                           <pre>
                             <code class="language-html">
-&lt;div class="exBox overflow-y"&gt;
-    &lt;div class="overflowDiv"&gt;&lt;/div&gt;
+&lt;div class="resultCont type01"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;background-size cover&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;div class="container"&gt;
+        &lt;div class="textBox"&gt;
+            &lt;div class="imgDiv"&gt;&lt;/div&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
+
+&lt;div class="resultCont type02"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;background-size 100% 100%&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;div class="container"&gt;
+        &lt;div class="textBox"&gt;
+            &lt;div class="imgDiv"&gt;&lt;/div&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
 &lt;/div&gt;
                             </code>
                           </pre>
@@ -218,9 +196,16 @@
                         <div class="highlightArea cScroll">
                           <pre>
                             <code class="language-scss">
-.exBox{border: 1px solid #222; height: 150px;
-  .overflowDiv{width: 100%; height: 200px;}
-}   
+.resultCont{position: relative;
+    .imgDiv{height: 600px; background-image: url("../images/common/1903x600.png"); background-repeat: no-repeat;}
+    &.type01{
+        .imgDiv{background-size: cover;}
+    }
+    &.type02{
+        .imgDiv{background-size: 100% 100%;}
+    }
+    +.resultCont{margin-top: 50px;}
+}
                             </code>
                         </pre>
                         </div>
@@ -230,30 +215,37 @@
                         <div class="highlightArea cScroll">
                           <pre>
                             <code class="language-css">
-.exBox {
-  border: 1px solid #222;
-  height: 150px;
+#wrap.pre .resultCont {
+    position: relative;
 }
 
-.exBox .overflowDiv {
-  width: 100%;
-  height: 200px;
+#wrap.pre .resultCont .imgDiv {
+    height: 600px;
+    background-image: url("../images/common/1903x600.png");
+    background-repeat: no-repeat;
+}
+
+#wrap.pre .resultCont.type01 .imgDiv {
+    background-size: cover;
+}
+
+#wrap.pre .resultCont.type02 .imgDiv {
+    background-size: 100% 100%;
+}
+
+#wrap.pre .resultCont + .resultCont {
+    margin-top: 50px;
 }
                             </code>
                           </pre>
                         </div>
                       </div>
                     </div>
-
-                    <div class="titleH2">
-                        <h2>Result</h2>
-                    </div>
-                    <div class="resultArea">
-                        <div class="inner">
-                            <div class="exBox overflow-y">
-                                <div class="overflowDiv"></div>
-                            </div>
-                        </div>
+                    <div class="btnArea end">
+                        <button type="button" class="button Bgblue" onclick="window.open('result-bg-image.html');">
+                          <span>결과보기</span>
+                          <i class="ico result"></i>
+                        </button>
                     </div>
                 </div>
             </div>
