--- a/pre-build/html/scroll-ele-overflow.html
+++ b/pre-build/html/scroll-ele-overflow.html
@@ -14,7 +14,7 @@
                   <span class="hidden">메인으로</span>
                 </a>
               </li>
-              <li class="noDepth active">
+              <li class="noDepth">
                 <span>
                   <a href="sub_first.html" title="홈">Home</a>
                 </span>
@@ -62,13 +62,13 @@
                 <span title="Layout">Layout</span>
                 <ul class="leftSubMenu">
                   <li>
-                    <a href="#" title="Center element">Center element</a>
+                    <a href="layout-centerEle.html" title="Center element">Center element</a>
                   </li>
                   <li>
-                    <a href="#" title="Tab">Tab</a>
+                    <a href="layout-tab.html" title="Tab">Tab</a>
                   </li>
                   <li>
-                    <a href="#" title="Background-image 100%">Background-image 100%</a>
+                    <a href="layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
                   </li>
                   <li>
                     <a href="#" title="Slide">Slide</a>
@@ -85,29 +85,29 @@
                 <span title="Input">Input</span>
                 <ul class="leftSubMenu">
                   <li>
-                    <a href="#" title="Input">input</a>
+                    <a href="input-inputStyle.html" title="Input">input</a>
                   </li>
                   <li>
-                    <a href="#" title="Radio">radio</a>
+                    <a href="input-radioStyle.html" title="Radio">radio</a>
                   </li>
                   <li>
-                    <a href="#" title="Select">select</a>
+                    <a href="input-selectStyle.html" title="Select">select</a>
                   </li>
                   <li>
-                    <a href="#" title="textarea">textarea</a>
+                    <a href="input-textareaStyle.html" title="textarea">textarea</a>
                   </li>
                   <li>
-                    <a href="#" title="checkbox">checkbox</a>
+                    <a href="input-chkboxStyle.html" title="checkbox">checkbox</a>
                   </li>
                 </ul>
               </li>
-              <li>
+              <li class="active">
                 <span title="Scroll element">Scroll element</span>
-                <ul class="leftSubMenu">
+                <ul class="leftSubMenu block">
                   <li>
                     <a href="scroll-ele-table.html" title="table 내부 스크롤">table 내부 스크롤</a>
                   </li>
-                  <li>
+                  <li class="active">
                     <a href="scroll-ele-overflow.html" title="Overflow scroll">Overflow scroll</a>
                   </li>
                 </ul>
@@ -151,9 +151,8 @@
             <div class="rightArea">
                 <div class="textBox">
                     <div class="titleH1">
-                        <h1>table 내부 스크롤</h1>
+                        <h1>Overflow scroll</h1>
                     </div>
-
                     <div class="tabWrap type01">
                       <div class="tabNav">
                         <ul class="tabList">
@@ -167,62 +166,8 @@
                         <div class="highlightArea cScroll">
                           <pre>
                             <code class="language-html">
-&lt;div class="table"&gt;
-    &lt;table&gt;
-        &lt;colgroup&gt;
-            &lt;col style="width: 120px;"&gt;
-            &lt;col style="width: 120px;"&gt;
-            &lt;col style="width: auto;"&gt;
-        &lt;/colgroup&gt;
-        &lt;thead&gt;
-            &lt;tr&gt;
-                &lt;th scope="col"&gt;1번째&lt;/th&gt;
-                &lt;th scope="col"&gt;2번째&lt;/th&gt;
-                &lt;th scope="col"&gt;3번째&lt;/th&gt;
-            &lt;/tr&gt;
-        &lt;/thead&gt;
-    &lt;/table&gt;
-&lt;/div&gt;
-&lt;div class="table overflow-y cScroll" style="max-height: 100px;"&gt;
-    &lt;table&gt;
-        &lt;colgroup&gt;
-            &lt;col style="width: 120px;"&gt;
-            &lt;col style="width: 120px;"&gt;
-            &lt;col style="width: auto;"&gt;
-        &lt;/colgroup&gt;
-        &lt;tbody&gt;
-            &lt;tr&gt;
-                &lt;td&gt;&lt;/td&gt;
-                &lt;td&gt;&lt;/td&gt;
-                &lt;td&gt;&lt;/td&gt;
-            &lt;/tr&gt;
-            &lt;tr&gt;
-                &lt;td&gt;&lt;/td&gt;
-                &lt;td&gt;&lt;/td&gt;
-                &lt;td&gt;&lt;/td&gt;
-            &lt;/tr&gt;
-            &lt;tr&gt;
-                &lt;td&gt;&lt;/td&gt;
-                &lt;td&gt;&lt;/td&gt;
-                &lt;td&gt;&lt;/td&gt;
-            &lt;/tr&gt;
-            &lt;tr&gt;
-                &lt;td&gt;&lt;/td&gt;
-                &lt;td&gt;&lt;/td&gt;
-                &lt;td&gt;&lt;/td&gt;
-            &lt;/tr&gt;
-            &lt;tr&gt;
-                &lt;td&gt;&lt;/td&gt;
-                &lt;td&gt;&lt;/td&gt;
-                &lt;td&gt;&lt;/td&gt;
-            &lt;/tr&gt;
-            &lt;tr&gt;
-                &lt;td&gt;&lt;/td&gt;
-                &lt;td&gt;&lt;/td&gt;
-                &lt;td&gt;&lt;/td&gt;
-            &lt;/tr&gt;
-        &lt;/tbody&gt;
-    &lt;/table&gt;
+&lt;div class="exBox overflow-y"&gt;
+    &lt;div class="overflowDiv"&gt;&lt;/div&gt;
 &lt;/div&gt;
                             </code>
                           </pre>
@@ -233,13 +178,9 @@
                         <div class="highlightArea cScroll">
                           <pre>
                             <code class="language-scss">
- .table{
-     table{width: 100%;}
-     th,td{height: 30px; border: 1px solid #ddd; padding: 5px; box-sizing: border-box; font-family: 'Noto Sans';}
-     th{font-size: 14px; color: #333; background-color: #f5f5f5;}
- }
- 
- .tScroll{display: block;}
+.exBox{border: 1px solid #222; height: 150px;
+  .overflowDiv{width: 100%; height: 200px;}
+}   
                             </code>
                         </pre>
                         </div>
@@ -249,90 +190,28 @@
                         <div class="highlightArea cScroll">
                           <pre>
                             <code class="language-css">
-.table th, .table td {
-  height: 30px;
-  border: 1px solid #ddd;
-  padding: 5px;
-  box-sizing: border-box;
-  font-family: 'Noto Sans';
+.exBox {
+  border: 1px solid #222;
+  height: 150px;
 }
 
-.table th {
-  font-size: 14px;
-  color: #333;
-  background-color: #f5f5f5;
-}
-
-.tScroll{
-  display: block;
+.exBox .overflowDiv {
+  width: 100%;
+  height: 200px;
 }
                             </code>
                           </pre>
                         </div>
                       </div>
                     </div>
-                    
+
                     <div class="titleH2">
                         <h2>Result</h2>
                     </div>
                     <div class="resultArea">
                         <div class="inner">
-                            <div class="table">
-                                <table>
-                                    <colgroup>
-                                        <col style="width: 120px;">
-                                        <col style="width: 120px;">
-                                        <col style="width: auto;">
-                                    </colgroup>
-                                    <thead>
-                                        <tr>
-                                            <th scope="col">1번째</th>
-                                            <th scope="col">2번째</th>
-                                            <th scope="col">3번째</th>
-                                        </tr>
-                                    </thead>
-                                </table>
-                            </div>
-                            <div class="table overflow-y maxH cScroll">
-                                <table>
-                                    <colgroup>
-                                        <col style="width: 120px;">
-                                        <col style="width: 120px;">
-                                        <col style="width: auto;">
-                                    </colgroup>
-                                    <tbody>
-                                        <tr>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                        </tr>
-                                        <tr>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                        </tr>
-                                        <tr>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                        </tr>
-                                        <tr>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                        </tr>
-                                        <tr>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                        </tr>
-                                        <tr>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                            <div class="exBox overflow-y">
+                                <div class="overflowDiv"></div>
                             </div>
                         </div>
                     </div>
