--- a/pre-build/html/sub_first.html
+++ b/pre-build/html/sub_first.html
@@ -40,7 +40,7 @@
                     <a href="#" title="Header Toggle">Header Toggle</a>
                   </li>
                   <li>
-                    <a href="#" title="scroll Header">scroll Header</a>
+                    <a href="#" title="Sticky Header">Sticky Header</a>
                   </li>
                 </ul>
               </li>
@@ -48,13 +48,13 @@
                 <span title="GNB">GNB</span>
                 <ul class="leftSubMenu">
                   <li>
-                    <a href="#" title="GNB Hover">GNB Hover</a>
+                    <a href="#" title="GNB Hover Full Dropdown">GNB Hover Full Dropdown</a>
                   </li>
                   <li>
-                    <a href="#" title="GNB li Hover">GNB li Hover</a>
+                    <a href="#" title="GNB Menu hover Full Dropdown">GNB Menu hover Full Dropdown</a>
                   </li>
                   <li>
-                    <a href="#" title="GNB li find Hover">GNB li find Hover</a>
+                    <a href="#" title="GNB Hoverable Dropdown">GNB Hoverable Dropdown</a>
                   </li>
                 </ul>
               </li>
@@ -82,12 +82,18 @@
                     <a href="../html/layout/layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
                   </li>
                   <li>
+                    <a href="#" title="Left menu">Left menu</a>
+                  </li>
+                  <li>
+                    <a href="#" title="Floating menu">Floating menu</a>
+                  </li>
+                  <li class="disabled">
                     <a href="#" title="Slide">Slide</a>
                   </li>
                   <li>
                     <a href="#" title="Flex">Flex</a>
                   </li>
-                  <li>
+                  <li class="disabled">
                     <a href="#" title="Grid">Grid</a>
                   </li>
                 </ul>
@@ -132,19 +138,36 @@
                   <li>
                     <a href="../html/custom/custom-scroll.html" title="Scroll design">Scroll design</a>
                   </li>
+                  <li>
+                    <a href="#" title="toolTip">toolTip</a>
+                  </li>
                 </ul>
               </li>
               <li>
-                <span title="Interaction">Interaction</span>
+                <span title="Popup">Popup</span>
                 <ul class="leftSubMenu">
                   <li>
-                    <a href="#" title="Hover transfrom">Hover transfrom</a>
+                    <a href="#" title="Popup show/hide">Popup show/hide</a>
                   </li>
                   <li>
-                    <a href="#" title="FadeIn & FadeOut">FadeIn & FadeOut</a>
+                    <a href="#" title="Toast popup">Toast popup</a>
                   </li>
                   <li>
-                    <a href="#" title="Click popup">Click popup</a>
+                    <a href="#" title="Drag popup">Drag popup</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <span title="Etc">Etc</span>
+                <ul class="leftSubMenu">
+                  <li>
+                    <a href="#" title="Animation element">Animation element</a>
+                  </li>
+                  <li>
+                    <a href="#" title="Text ellipsis">Text ellipsis</a>
+                  </li>
+                  <li class="disabled">
+                    <a href="#" title="Key frames">Key frames</a>
                   </li>
                 </ul>
               </li>
@@ -162,26 +185,38 @@
             <div class="rightArea">
                 <div class="textBox">
                     <div class="titleH1">
-                        <h1>component css 소개</h1>
+                        <h1>component css 가 뭔가요?</h1>
                     </div>
                     <div class="mainTxt">
-                        <p>component css 사이트는 웹 퍼블리싱 작업에 필요한 여러가지 요소들의
-                        스타일들을 정리하여 제공하는 사이트입니다.
+                        <p>component css는 웹 퍼블리싱 작업에 자주 사용되는 요소들의 스타일에 대한
+                        가이드 라인을 제공합니다!
                         </p>
-                        <p>물론 모든 스타일을 다 제공할 수는 없겠지만 어느정도 기본 틀이되는 css 컴포넌트들을
-                        제공하여 원하는 색상이나 모양을 바꿔서</p>
-                        <p>그대로 쓸 수 있는 컴포넌트들입니다.</p>
-                    </div>
-                </div>
-
-                <div class="textBox">
-                    <div class="titleH2">
-                        <h2>목적</h2>
-                    </div>
-                    <div class="mainTxt">
-                        <p>웹사이트에 자주 사용되는 css 스타일들을 기록해서 바로바로 코드를 긁어서
-                        사용할 수 있도록 하는 것이 주 목적입니다.</p>
-                        <p></p>
+                        <p>페이지마다 재사용될만한 구성요소들의 마크업 (html) 과 스타일 (css) 또는 js 코드들을 기록하여 
+                        번거롭게 직접 코딩하지 않고 <br> 필요한 코드만 긁어서 바로 사용할 수 있다는게 장점입니다.
+                        </p>
+                        <br>
+                        <p>물론 코딩을 직접안하고 복사 붙여넣기로 단순하게 코드를 가져간다는게 좋은 방법은 아니지만 
+                        매 프로젝트 세팅할 때마다 비슷한 스타일의 코드를<br>
+                        일일이 치는게 지겨운 분들 혹은 html & css를 배우고 있으신 분들에게 포커스를 맞춘 사이트라고 생각 해주시면 되겠습니다.
+                        </p>
+                        <br><br>
+                        <div class="innerTxt">
+                          <strong>코드출처</strong>
+                          <p>구글링을 통해 가져온 코드 혹은 참고한 코드들은 전부 사이트 링크를 달아두는 등의 코드 출처를 남기고 있습니다.</p>
+                        </div>
+                        <div class="innerTxt">
+                          <strong>더 많은 컴포넌트들</strong>
+                          <p>꾸준한 업데이트를 통해 현재보다 더 많은 컴포넌트들을 기록할 예정입니다. 조금만 기다려주세요!</p>
+                        </div>
+                        <div class="innerTxt">
+                          <strong>업데이트 소식</strong>
+                          <p>특별한건 아니지만, <a class="link" href="update-note.html" target="_blank">여기서</a>
+                          업데이트 로그를 작성하고 있습니다. 궁금하시다면 참고해보세요!</p>
+                        </div>
+                        <div class="innerTxt">
+                          <strong>피드백</strong>
+                          <p>코드의 문제점 , 건의사항 등등 component css에 대한 피드백은 <a class="mail" href="mailto:sky11916@naver.com">sky11916@naver.com</a> 으로 부탁해요!</p>
+                        </div>
                     </div>
                 </div>
             </div>
