--- a/pre-build/html/codingList.html
+++ b/pre-build/html/codingList.html
@@ -59,6 +59,15 @@
                         <td>2021-12-19</td>
                         <td></td>
                     </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>
+                            <a href="../html/license.html">license.html</a>
+                        </td>
+                        <td></td>
+                        <td>2022-01-14</td>
+                        <td></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
